# cli

./: .gitignore  Cargo.toml  build.rs  custom_rules_example.json  jreleaser.yml  package.json  update-rules.js
.github/workflows/: release.yaml
src/: main.rs
src/colors/: mod.rs
src/rules/: mod.rs
